# game_of_life

./: .gitignore  CMakeLists.txt  README.md
include/: game_of_life.h  pixelbuffer.h
src/: game_of_life.c  game_of_life_ffmpeg.c  game_of_life_main.c  main.c  pixelbuffer.c
